# chattymoe

./: .gitignore  MANIFEST.in  Pipfile  Readme.md  graph  setup.cfg  tox.ini
chattymoe/: __main__.py  api_key.py  arguments.py  chattymoe.py  content.py  contracts.py  get_creds.py  project_state.py  prompt.py  response.py  settings.py
chattymoe/actions/: ask.py  auto.py  chat.py  info.py  state.py  write.py
chattymoe/apps/: process.yml
chattymoe/apps/shelly/: shelly.py
chattymoe/helpers/: general.py  markddown_to_python.py
chattymoe/test/: test_chat.py  test_chattymoe.py  test_content.py  test_markdown_to_pyhton.py  test_prompt.py  test_response.py
chattymoe/test/data/: chattymoe.yml  response.txt  test_content.yml  test_markdown_to_python_testfile.md  test_markdown_to_python_testfile.py
media/chats/: auto_python.yml  empty.yml  python_developer.yml  pythoncode.yml  test_chat.yml
media/templates/: Readme.md
