[metadata]
name = chattymoe
include_package_data = True
version = 0.0.1
description = chatGpt based coding engine
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = Lars Mielke
author_email = info@while-ai.org
url = https://gitlab.com/larsmielke2/chattymoe

[options]
py_modules = chattymoe
install_requires = 
    colorama
    pyyaml
    requests
    tabulate
packages = find:

[options.entry_points]
console_scripts =
    moe = chattymoe.__main__:main
